site/src/content/docs/docs/v0.5/concepts/evidence.mdx
---
slug: docs/v0.5/concepts/evidence
title: Evidence
description: Typed findings and bounded digests that make analysis auditable without replacing agent judgment.
---

Marivo is a pure Python analysis library. It does not use an LLM, decide what a
business result means, or choose the next analysis step. Its evidence engine
makes deterministic operator results cheaper to read and easier to audit.

## The evidence model

Each committed operator result follows one path:

```text
artifact -> typed findings -> bounded artifact digest
```

A `Finding` is a typed extraction from one artifact. An `ArtifactDigest` is an
operator-specific projection of those findings for the immediate read. The
agent remains responsible for combining artifacts, judging business impact,
and deciding what to execute next.

The digest never upgrades contribution into cause, correlation into effect, a
candidate into a confirmed anomaly, a statistical test into business
importance, or a forecast into an observed outcome. Explicit `boundaries` state
which inference the operator did not support.

## Read the immediate result

Use one structured path:

```python
result = session.compare(current, baseline)

print(result.evidence_status)
digest = result.evidence_digest
result.show()
```

`evidence_status` is `complete`, `partial`, or `unavailable`.
`evidence_digest` is the immutable commit-time `ArtifactDigest`, or `None` when
it could not be produced. `show()` renders that same bounded digest before the
data preview.

A digest contains at most five typed items and three inference boundaries. Its
`omissions` reports discarded item counts, and `fallback` tells you whether
exact findings and raw rows are available. Absence from a bounded digest does
not mean absence from the artifact. For a multi-metric observation, the digest
retains the first five metrics in the order passed to `observe`; it does not rank
metrics by their totals. When that limit is reached, `show()` reports
`selection=metric_input_order` and points to
`session.evidence.findings(artifact_ref='<ref>')` for every exact finding.
`top_segments` remains a separate within-metric ranking by absolute segment
magnitude.

The main item types match operator semantics:

| Operator | Digest item | Meaning |
| --- | --- | --- |
| `observe` | `ObservationFact` | observed value or distribution summary |
| `compare` | `ChangeFact` | algebraic change |
| `attribute` | `ContributionFact` | algebraic contribution, not cause |
| `correlate` | `AssociationFact` | estimated association, not cause |
| `hypothesis_test` | `TestDecision` | decision under the declared statistical test |
| `forecast` | `ForecastOutput` | prediction, not observed actual |
| `discover.*` | `AnomalyCandidate` | candidate requiring review |
| `transform.*` / `MetricFrame.metric(...)` | empty digest | lineage-preserving transformation or projection only |

Construction-time quality is not an evidence-producing operator. Read its
parent-owned checks with `frame.quality_report()`; the returned report has no
independent digest or job.

## Inspect limits and exact evidence

If the question needs omitted items, row-level validation, or evidence outside
the operator's inference boundary, follow the digest's exact-read contract:

```python
digest = session.evidence.digest(result.ref)
findings = session.evidence.findings(artifact_ref=result.ref, limit=50)
frame = session.get_frame(result.ref)

for finding in findings.items:
    finding.show()
```

`Finding.render()` returns one bounded English evidence statement. Pass
`language="zh"` for Chinese. The statement stays on one line and does not include
the canonical id; `FindingPage.render()` prefixes every statement with its real
`finding_id` so exact follow-up reads remain copyable. Rendering is pure: it
does not query Session state or infer labels such as “this week.” When a delta
finding retained both exact comparison scopes, the line shows their half-open
`[start, end)` ranges; otherwise it omits the window clause.

Trace one finding back to its declared source fields and retained digest items:

```python
trace = session.evidence.trace(findings.items[0].finding_id)
print(trace.derivation.rule_id, trace.source_fields)
```

The trace is an audit record, not a system-generated claim or judgment.

## Check compatibility before combining findings

When a conclusion combines two or more Findings, including Findings from the
same artifact or analysis round, check the exact selection first:

```python
compatibility = session.evidence.compatibility(
    finding_ids=[finding_a.finding_id, finding_b.finding_id],
)
compatibility.show()
```

The input is 1–20 unique Finding ids. Input order is irrelevant, and every pair
is checked. The immutable result compares governed subject identity, scope, and
current semantic definitions; it also aggregates quality, evidence status,
epistemic kinds, typed issues, and the operators' complete inference-boundary
set.

Proceed with mechanical synthesis only for `status == "compatible"`.
`incompatible` identifies a known contradiction or blocking quality/evidence
issue. `indeterminate` means Marivo cannot prove a subject, scope, operator rule,
or current semantic authority; do not infer through it. Compatibility does not
judge causality, business importance, freshness, or intended use, and it does
not mutate artifacts or evidence.

## Revalidate a recovered artifact

After restoring an exact artifact, check whether its persisted identity,
current scoped semantic authority, and evidence still agree:

```python
frame = session.get_frame(artifact_ref)
revalidation = session.revalidate(frame)
revalidation.show()
```

Proceed only when `status == "admissible"`. `stale` means at least one governed
dependency has confirmed drift and the producing branch should be rerun.
`indeterminate` means current authority cannot be proven or the retained
evidence does not satisfy its contract. Complete evidence is accepted; partial
evidence is accepted only when every availability issue is a warning and the
explicit fallback retains safe rows. Unavailable evidence is indeterminate.

The result is immutable, bounded, and ephemeral. Its stable fingerprint does
not include the UTC check time. Revalidation does not change the artifact or
ledger and does not query datasource or source health, so it does not prove
source freshness. Broken evidence identity raises `EvidenceIntegrityError`;
an unavailable evidence store raises `EvidenceStoreUnavailableError`.

Linked `ComponentFrame` and `CoverageFrame` sidecars have no independent
evidence projection. Revalidation verifies their own persisted identity and
their canonical parent evidence, then returns their healthy unavailable
evidence state as `indeterminate`.

## Understand execution-time authority admission

Artifact-consuming capabilities declare whether they require current semantic
authority. A `semantic_current` operator checks the Artifact's exact scoped
dependency closure before its business logic. Confirmed drift raises
`mv.errors.ArtifactStaleError`; missing or unprovable authority raises
`mv.errors.ArtifactAuthorityUnknownError`. The structured error includes the
capability and parameter, Artifact/source/definition refs, real recorded and
current fingerprints, and a repair.

A `materialized_only` operator consumes committed values without consulting
the current catalog. Existing Session ownership, integrity, shape, coverage,
content identity, and operator-specific checks still apply. This is why closed
reducers, transforms, projections, and terminal reads are not blocked by an
unrelated catalog change.

Focused operator help displays the registered authority requirement. An
Artifact's `.contract()` continues to describe mechanical commit-time
compatibility; it does not run currentness validation. Execution admission does
not call `session.revalidate(...)`, inspect evidence coverage, or query
datasource/source health.

## Recover a session with bounded pages

List reads are bounded and newest-first. `session.evidence.findings` accepts
`limit` in `[1, 100]` (default `50`); `session.evidence.digests` accepts the
same range (default `10`). A `limit` outside the range raises
`EvidenceLimitError`, which reports the expected range and a copyable repair.

```python
frames = session.frame_summaries(limit=20)
digests = session.evidence.digests(limit=10)
findings = session.evidence.findings(limit=50)

if digests.has_more:
    digests = session.evidence.digests(
        limit=10,
        cursor=digests.next_cursor,
    )

if findings.has_more:
    findings = session.evidence.findings(
        limit=50,
        cursor=findings.next_cursor,
    )
```

Pages expose immutable `items`, `limit`, `has_more`, and `next_cursor`. They use
ordinary keyset paging, not snapshot isolation; a new commit between page reads
may change the newest edge. Treat cursors as opaque continuation tokens.

If the evidence store is unavailable, list and exact reads raise
`EvidenceStoreUnavailableError`. An empty page means the healthy store matched
no records.

## Issues and repair

`result.contract().issues` contains closed typed issues:

- `DataQualityIssue` for evaluated quality failures;
- `ComparabilityIssue` for incompatible or approximate comparisons;
- `EvidenceAvailabilityIssue` for extraction, digest, or store degradation.

The current cutover is destructive: non-v4 evidence stores and frame sidecars containing
removed evidence fields are rejected. Recreate the analysis session; Marivo
does not migrate or reinterpret judgment-era state.

An issue may carry `AnalysisRepair`, which explains how to retry the failing
capability. Repair is local error recovery; it is not a persisted follow-up
plan. The agent chooses whether and how to continue.

## Review a conclusion

Check three things:

1. The result uses the intended metric, scope, and comparison.
2. Every material claim is supported by an artifact or typed evidence item.
3. The conclusion respects omissions, quality issues, and inference boundaries.

If the metric definition is wrong, stop and repair it through
`marivo-semantic`. More analysis cannot compensate for the wrong business
contract. See [Analysis Workflow](/docs/v0.5/concepts/analysis-workflow/) for
the typed operator loop.
